<resources>
    <string name="app_name">Leone IPTV</string>
    <string name="nav_home">Home</string>
    <string name="nav_playlist">Playlists</string>
    <string name="nav_channels">Channels</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="hint_playlist_name">Playlist name</string>
    <string name="hint_playlist_url">M3U URL</string>
    <string name="action_add_playlist">Add playlist</string>
    <string name="action_remove">Remove</string>
    <string name="home_playlist_count">Playlists saved: %1$d</string>
    <string name="settings_version">Version %1$s</string>
    <string name="settings_dark_mode">Dark mode</string>
</resources>
